--- a/src/Pages/Dashbaord/Home2/style.css
+++ b/src/Pages/Dashbaord/Home2/style.css
@@ -10,6 +10,7 @@
 .home-container h1 {
     text-align: center;
     color: #333;
+    font-weight: 700;
     margin-bottom: 20px;
     font-size: 1.8em;
 }
