--- a/src/Pages/Dashbaord/Home2/style.css
+++ b/src/Pages/Dashbaord/Home2/style.css
@@ -10,9 +10,9 @@
 .home-container h1 {
     text-align: center;
     color: #333;
-    font-weight: 700;
+    font-weight: 900;
     margin-bottom: 20px;
-    font-size: 1.8em;
+    font-size: 2.5rem;
 }
 .ai-generating-spinner-container {
     display: flex;
