--- a/src/utils/SearchSuggestion/style.css
+++ b/src/utils/SearchSuggestion/style.css
@@ -2,9 +2,9 @@
 .suggestions-list {
     list-style-type: none;
     padding: 0;
-    margin: 0; /* Remove default margin */
+    margin: 0;
     position: absolute;
-    top: 100%; /* Position it right below its relative parent's input field */
+    top: 0;
     left: 0;
     right: 0; /* Stretches to the width of its relative parent */
     background-color: white;
@@ -17,6 +17,8 @@
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     box-sizing: border-box;
+    
+
 }
 
 .suggestion-item {
@@ -24,6 +26,7 @@
     cursor: pointer;
     font-size: 15px;
     color: #333;
+    
 }
 
 .suggestion-item:hover {
